Default config added values

--- a/default.config.cfg
+++ b/default.config.cfg
@@ -1,3 +1,9 @@
+[Fridge]
+
+; The maximum temperature before an alert will trigger
+THRESHOLD : 25.00
+NOTIFY_EVERY_X_SECONDS : 1800
+
 [Arduino]
 
 ; Name of the connection arduino is on.
